force-app/main/default/objects/Cash_Entry__e/Cash_Entry__e.object-meta.xml
<CustomObject>
    <label>Cash Entry</label>
    <pluralLabel>255</pluralLabel>
</CustomObject>