force-app/main/default/objects/Cash_Entry__e/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>