force-app/main/default/objects/Cash_Entry__e/fields/Dual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dual_Rate__c</fullName>
    <label>Dual Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>