force-app/main/default/objects/Cash_Entry__e/fields/Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Value__c</fullName>
    <label>Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>