force-app/main/default/objects/Cash_Entry__e/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>