force-app/main/default/objects/Cash_Entry__e/fields/Total_Cash_Entry_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Entry_Value__c</fullName>
    <label>Total Cash Entry Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>